2011-04-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/ItkKernelTransform.cpp,
	PointsToolbox/itk_kernel_transform.m: v0.1.0

	- ITK_KERNEL_TRANSFORM ITK warps between 3D point sets with a
	known correspondence.

	* Add CMakeLists.txt, PointsToolbox/CMakeLists.txt,
	MatlabMakeMacros.cmake:

	- Cmake files to build PointsToolbox/itk_kernel_transform.mexa64.

	- This is a big development for the project, because now we know
	how to write C++ code with ITK functions, and compile it as a MEX
	file so that we can run it directly from Matlab. Also, we can
	build the files using cmake, and we don't need mex.

2011-04-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_plot.m: v0.2.0

	- Add input arguments varargin so that we can pass extra options
	to the plots.

	* FileFormatToolbox/scinrrd_world2index.m: v0.2.0

	- Add input argument CHOP so that we can deactivate the conversion
	of points outside the image to NaN.

2011-04-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_seg2label_stats.m: v0.1.0

	- SCINRRD_SEG2LABEL_STATS  Shape stats for each label in a
	multi-label segmentation.

	* Rename FiltersToolbox/scinrrd_seg2vesselness.m as
	FiltersToolbox/scinrrd_seg2voxel_stats.m.

	* PointsToolbox/pts_rotmat.m: v1.0.0

	- PTS_ROTMAT Compute rotation matrix to minimize least squares
	error.

	* PointsToolbox/pts_procrustes.m: v1.0.0

	- PTS_PROCRUSTES Least-Squares Fit Orthogonal Procrustes Analysis
	between two sets of points.

	* PointsToolbox/pts_procrustes_gen.m: v1.0.0

	- PTS_PROCRUSTES_GEN Generalized Least-Squares Fit Orthogonal
	Procrustes Analysis.

	* PointsToolbox/pts_cn.m: v1.0.0

	- PTS_CN Center and normalize a set of points.

	* PointsToolbox/pts_simil_map.m: v1.0.0

	- PTS_SIMIL_MAP Apply similarity transformation to points.

	* PointsToolbox/pts_simil_map_params.m: v1.0.0

	- PTS_SIMIL_MAP_PARAMS Compute similarity transformation